# nginx-role

./: .ansible-lint  .gitignore  .replit  README.md  pyproject.toml
.github/workflows/: ansible-test.yml  publish.yml
ansible_collections/kelleyblackmore/nginx/: README.md  galaxy.yml
ansible_collections/kelleyblackmore/nginx/playbooks/: install_nginx.yml  upgrade_nginx.yml
ansible_collections/kelleyblackmore/nginx/roles/install/handlers/: main.yml
ansible_collections/kelleyblackmore/nginx/roles/install/meta/: main.yml
ansible_collections/kelleyblackmore/nginx/roles/install/tasks/: main.yml
ansible_collections/kelleyblackmore/nginx/roles/install/templates/: nginx.conf.j2
ansible_collections/kelleyblackmore/nginx/roles/install/vars/: debian.yml  redhat.yml
ansible_collections/kelleyblackmore/nginx/roles/upgrade/defaults/: main.yml
ansible_collections/kelleyblackmore/nginx/roles/upgrade/meta/: main.yml
ansible_collections/kelleyblackmore/nginx/roles/upgrade/tasks/: main.yml
ansible_collections/kelleyblackmore/nginx/roles/upgrade/vars/: main.yml  redhat.yml
ansible_collections/lsanix/nginx/: README.md  galaxy.yml
ansible_collections/lsanix/nginx/playbooks/: install_nginx.yml  upgrade_nginx.yml
ansible_collections/lsanix/nginx/roles/install/defaults/: main.yml
ansible_collections/lsanix/nginx/roles/install/vars/: main.yml
ansible_collections/lsanix/nginx/roles/upgrade/handlers/: main.yml
ansible_collections/lsanix/nginx/roles/upgrade/tasks/: main.yml
molecule/default/: converge.yml  verify.yml
(+1 files in other folders)
